[issue:1850] slight improvements + javadoc